# workspace

./: .gitignore  AUTHORS  BUGFORM  BUGS  COPYING.WTFPL  ChangeLog  FAQ  FAQ.I18N  INSTALL-WMAKER  Makefile  Makefile.am  Makefile.in  NEWS  README  README.definable-cursor  README.md  TODO  The-perfect-Window-Maker-patch.txt  aclocal.m4  build.sh  config-paths.h  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool  setup.sh
Clock/: ChangeLog  INSTALL  Imakefile  Makefile.bak  README  configure  dynlist.h  wsclock  wsclock._man  wsclock.c  wsclock.man  wsclock.man.in  wsclock.spec  wsclock.spec.in
WINGs/: ChangeLog  Makefile  Makefile.in  NEWS  README  WINGs.pc  array.c  error.c  findfile.c  get-wings-flags  get-wutil-flags  memory.c  menuparser.c  menuparser_macros.c  proplist.c  userdefaults.c  wapplication.c  wappresource.c  wevent.c  widgets.c  wprogressindicator.c  wwindow.c
WPrefs.app/: Appearance.c  Configurations.c  Docks.c  Expert.c  Focus.c  FontSimple.c  Icons.c  KeyboardSettings.c  KeyboardShortcuts.c  Makefile  Makefile.am  Makefile.in  Menu.c  MenuPreferences.c  MouseSettings.c  Paths.c  Preferences.c  README  TexturePanel.c  TexturePanel.h  Themes.c  WPrefs  WPrefs.c  WPrefs.h  WPrefs.tiff  WPrefs.xpm  WindowHandling.c  Workspace.c  dynlist.c  editmenu.c  editmenu.h  main.c  wsclock.c
Workspace/: Makefile  Makefile.in  README  README.themes  autostart.sh  background.menu  exitscript.sh  menu  menu.bg  menu.ca  menu.cz  menu.da  menu.de  menu.el  menu.es  menu.fi  menu.fr  menu.gl  menu.he  menu.hr  menu.hu  menu.it  menu.ja  menu.ko  menu.nl  menu.no  menu.pl  menu.pt  menu.ro  menu.ru  menu.se  menu.sk  menu.sl  menu.tr  menu.zh_CN  menu.zh_TW  mkMakefile  plmenu  plmenu.bg  plmenu.da  (+14 more)
Workspace/Defaults/: .WMState.in.swp  Makefile  Makefile.am  Makefile.in  WMRootMenu  WMState  WMWindowAttributes  WMWindowAttributes.in  Workspace  Workspace.in
Workspace/IconSets/: Default.iconset  Makefile  Makefile.am  Makefile.in  xetos.iconset
Workspace/Icons/: .Makefile.swp  GNUstep.xpm  Makefile  Makefile.am  Makefile.in  README  README.md  clip.xpm  icons.list  install.sh
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
debian/: README.Debian  README.build  changelog  control  copyright  nightly_build.sh  rules  watch  workspace-common.dirs  workspace-common.install  workspace-common.links  workspace-common.lintian-overrides  workspace-common.manpages  workspace-common.postinst  workspace-common.postrm  workspace.dirs  workspace.install  workspace.links  workspace.lintian-overrides  workspace.menu  workspace.menu-method  workspace.postinst  workspace.prerm
doc/: Makefile  Makefile.am  Makefile.in  WPrefs.1x  Workspace.1x  get-wings-flags.1  get-wraster-flags.1  get-wutil-flags.1  geticonset.1x  getstyle.1x  seticons.1x  setstyle.1x  upgrade-workspace-defaults.8  wdread.1  wdwrite.1x  wmagnify.1x  wmgenmenu.1  wmmenugen.1  wmsetbg.1x  workspace.1x  wxcopy.1x  wxpaste.1x
m4/: wm_attributes.m4
po/: Makefile  Makefile.am  Makefile.in  README  be.po  bg.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  es.po  et.po  fi.po  fr.po  gl.po  hr.po  hu.po  hy.po  it.po  ja.po  ko.po  ms.po  nl.po  no.po  pl.po  pt.po  ro.po  ru.po  sk.po  sv.po  tr.po  zh_CN.po  zh_TW.po
src/: GNUstep.h  Makefile  Makefile.am  Makefile.in  Workspace.h  actions.c  actions.h  appicon.c  appicon.h  application.c  application.h  appmenu.c  appmenu.h  balloon.c  balloon.h  client.c  client.h  colormap.c  colormap.h  cycling.c  cycling.h  defaults.c  defaults.h  dialog.c  dialog.h  dock.c  dock.h  dockedapp.c  dockedapp.h  event.c  event.h  framewin.c  framewin.h  icon.c  icon.h  keybind.h  main.c  main.h  menu.c  menu.h  (+60 more)
test/: Makefile  Makefile.in  notest.c  wtest.c
util/: Makefile  Makefile.am  Makefile.in  README  bughint  common.h  convertfonts  convertfonts.c  geticonset  geticonset.c  getstyle  getstyle.c  seticons  seticons.c  setstyle  setstyle.c  wdread  wdread.c  wdwrite  wdwrite.c  wkdemenu.pl  wm-oldmenu2new  wmagnify  wmgenmenu  wmgenmenu.c  wmgenmenu.h  wmmenugen  wmmenugen.c  wmmenugen.h  wmmenugen_misc.c  wmmenugen_parse_wmconfig.c  wmmenugen_parse_xdg.c  wmsetbg  wmsetbg.c  workspace.inst  workspace.inst.in  wxcopy  wxcopy.c  wxpaste  wxpaste.c
wmlib/: Makefile  Makefile.in  WMaker.h  app.c  app.h  (+4 more)
(+389 files in other folders)
