
defsdatadir = $(pkgdatadir)/Icons


defsdata_DATA = \
Art.png\
CD-Burn.png\
ChipView.png\
Clip-2.0.png\
Clip_2.png\
Clip.png\
Clip-Xeto.png\
CodeView.png\
DebianBlock.png\
DefaultIcon.png\
Directory-B33f.png\
Directory-LookingGlass.png\
Directory-NO.png\
Disk-LookingGlass.png\
Disk.png\
Document-LookingGlass.png\
Document-Unknown.png\
Drawer.png\
Exe-Shell.png\
Exe_Win.png\
Exe-X.png\
FileCab2-Look.png\
Filecabinet2.png\
Filecabinet.png\
FileCab-Look.png\
Flac.png\
Folder.png\
FolderRO.png\
Folder-Search.png\
Ftp.png\
Globe.png\
Image-Default.png\
LightBang.png\
LightIdea.png\
Light.png\
Messenge.png\
Movies.png\
Mozilla.png\
Negative-LookingGlass.png\
Negatives.png\
NetLook.png\
News.png\
Record.png\
RedHatBlock.png\
Script-Search.png\
Shell.png\
SlackwareBlock.png\
Speaker.png\
SUSEBlock.png\
XChat.png\
Xetos.png\
README

EXTRA_DIST = $(defsdata_DATA) 

