
defsdatadir = $(pkgdatadir)/Icons


defsdata_DATA = \
Art.png\
CD-Burn.png\
ChipView.png\
Clip.png\
Clip-Xeto.png\
CodeView.png\
DefaultIcon.png\
Directory-B33f.png\
Directory-LookingGlass.png\
Directory-NO.png\
Disk-LookingGlass.png\
Disk.png\
Document-LookingGlass.png\
Document-Unknown.png\
Drawer2-Look.png\
Drawer2.png\
Drawer-Look.png\
Drawer.png\
Exe-Shell.png\
Exe_Win.png\
Exe-X.png\
Folder.png\
FolderRO.png\
Folder-Search.png\
Ftp.png\
Globe.png\
Image-Default.png\
LightBang.png\
LightIdea.png\
Light.png\
Messenge.png\
Movies.png\
Negative-LookingGlass.png\
Negatives.png\
NetLook.png\
News.png\
Record.png\
Script-Search.png\
Shell.png\
Xetos.png\
README

EXTRA_DIST = $(defsdata_DATA) 

