
defsdatadir = $(pkgdatadir)/Icons


defsdata_DATA = \
Art.png\
Audio.png\
AudioPrefs.png\
Background.png\
BackgroundPrefs.png\
Calc.png\
CD-Burn.png\
ChipView.png\
Clipboard.png\
Clip.png\
Clip-Xeto.png\
ClockPrefs.png\
CodeView.png\
ConfigX.png\
DateTime.png\
defaultAppIcon.png\
DefaultIcon.png\
Directory-B33f.png\
Directory-LookingGlass.png\
Directory-NO.png\
DirectoryView.png\
Disk-LookingGlass.png\
Disk.png\
DiskView.png\
DisplayPrefs.png\
DMLogout.png\
DMPrefs.png\
Document-LookingGlass.png\
Document-Unknown.png\
DocumentView.png\
DocView.png\
Drawer2-Look.png\
Drawer2.png\
Drawer-Look.png\
Drawer.png\
Exe-Shell.png\
Exe_Win.png\
Exe-X.png\
Filecabinet2.png\
Filecabinet.png\
FileCabView.png\
file-manager.png\
Flac.png\
Folder.png\
FolderRO.png\
Folder-Search.png\
FontPrefs.png\
Fonts.png\
Ftp.png\
Globe.png\
GNUstep.png\
Image-Default.png\
Keycap.png\
LightBang.png\
LightIdea.png\
Light.png\
LockScreen.png\
Log.png\
Mac.png\
Mail.png\
Messenge.png\
Movies.png\
Negative-LookingGlass.png\
Negatives.png\
NegativeView.png\
NetLook.png\
NetView.png\
Network.png\
NetworkPrefs.png\
News.png\
Note.png\
Prefs.png\
Record.png\
ScreenSaver.png\
Screenshot.png\
Script-Search.png\
Settings.png\
Shell.png\
Terminal.png\
Urxvt.png\
Users.png\
WinDesktop.png\
xetos-dock-tile.png\
Xetos.png\
Xterm.png\
README

EXTRA_DIST = $(defsdata_DATA) 

